--- a/package.json
+++ b/package.json
@@ -3,40 +3,37 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "next dev --turbopack",
+    "build": "next build --turbopack",
     "start": "next start",
-    "lint": "next lint",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,css,scss,md,html,css}\""
+    "lint": "biome check",
+    "format": "biome format --write"
   },
   "dependencies": {
-    "@heroicons/react": "^1.0.6",
-    "@next/font": "13.1.5",
-    "@tailwindcss/line-clamp": "^0.4.2",
-    "@vercel/analytics": "^0.1.8",
-    "@vercel/edge-config": "^0.1.1",
-    "eventsource-parser": "^0.0.5",
-    "framer-motion": "^8.5.4",
-    "next": "13.1.5",
-    "next-themes": "^0.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hot-toast": "^2.4.0",
-    "react-use-measure": "^2.1.1",
-    "typescript": "4.9.4"
+    "@ai-sdk/openai": "^2.0.22",
+    "@hookform/resolvers": "^5.2.1",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "ai": "^5.0.27",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.542.0",
+    "next": "15.5.2",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-hook-form": "^7.62.0",
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.1.4"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.3",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.27",
-    "@types/react-dom": "18.0.10",
-    "autoprefixer": "^10.4.13",
-    "eslint": "8.32.0",
-    "eslint-config-next": "13.1.5",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-tailwindcss": "^3.8.0",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.1",
-    "tailwindcss": "^3.2.4"
+    "@biomejs/biome": "2.2.0",
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.7",
+    "typescript": "^5"
   }
 }
